# hypergebra

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
build_tools/: run.sh
build_utils/: prepare_shaders.py
include/: camera.h  common.h  geometry.h  graphics.h  instructions.h  object.h  object_list.h  screen_point.h  shader_program.h  shaders.h  tools.h
src/: camera.cpp  common.cpp  geometry.cpp  graphics.cpp  hypergebra.cpp  instructions.cpp  object.cpp  object_graphics.cpp  object_list.cpp  screen_point.cpp  shader_program.cpp  tools.cpp
src/shaders/: beltrami_klein_lib.glsl  circle_frag.glsl  circle_vert.glsl  line_frag.glsl  line_vert.glsl  poincare_disk_lib.glsl  poincare_half_plane_lib.glsl  poincare_lib.glsl  point_frag.glsl  point_vert.glsl
